# ESP_AVB

./: .clangd  .gitignore  CMakeLists.txt  Kconfig.projbuild  README.md  atdecc.c  avb.c  avb.h  avbbridge.c  avbbridge.h  avbcodec.c  avbconfig.h  avbfqtss.c  avbnet.c  avbpll.c  avbstats.c  avbutils.c  avbutils.h  avtp.c  config.h  idf_component.yml  msrp.c  sdkconfig.defaults
.github/workflows/: main.yml
build.clang/: .ninja_deps  .ninja_log  CMakeCache.txt  app-flash_args  cmake_install.cmake  config.env  flash_args.in  flash_bootloader_args  flash_project_args  flasher_args.json  flasher_args.json.in  kconfigs.in  kconfigs_projbuild.in  ldgen_libraries  ldgen_libraries.in  project_description.json  x509_crt_bundle.S
build.clang/bootloader/: CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  config.env  kconfigs.in  kconfigs_projbuild.in  project_description.json
build.clang/config/: kconfig_menus.json  sdkconfig.cmake  sdkconfig.h  sdkconfig.json
build.clang/esp-idf/: cmake_install.cmake
build.clang/gdbinit/: gdbinit  symbols
build.clang/log/: idf_py_stderr_output_381023  (+5 more)
components/esp_avb/: CMakeLists.txt  Kconfig.projbuild  README.md  atdecc.c  avb.c  avb.h  avbcodec.c  avbnet.c  avbutils.c  avbutils.h  avtp.c  config.h  idf_component.yml  messages.c  network.c  talker.c  talker.h  utils.c  utils.h
components/esp_avb/include/: esp_avb.h
include/: esp_avb.h
main/: CMakeLists.txt  Kconfig.projbuild  avb_example.c  canon_half.pcm  i2s_es8311_example.c  idf_component.yml
tools/: avb_audio_analyzer.py  avb_controller.py
(+3032 files in other folders)
